# gtoc13

./: .gitignore  README.md  SOLUTION_FORMAT.md  pyproject.toml
.github/workflows/: README.md  test.yml
__main___out/: IPOPT.out
__main___out/coloring_files/: total_coloring.pkl
__main___out/reports/: inputs.html  n2.html  opt_report.html  total_coloring.html
gtoc13/: __init__.py  analytic.py  anim.py  astrodynamics.py  bodies.py  cartesian_state.py  constants.py  ephemerides_jax.py  jax.py  lambert.py  mission_plan.py  ode.py  odes.py  orbital_elements.py  scoring.py  solution.py  solve_first_arc.py  spacecraft_state.py
gtoc13/dymos_solver/: USAGE_GUIDE.md  __main__.py  add_arc.py  ballistic_prop_comp.py  dymos_solver.py  dymos_solver2.py  energy_comp.py  ephem_comp.py  flyby_comp.py  initial_guesses.py  miss_distance_comp.py  ode_comp.py  phases.py  score_comp.py  solve_all.py  solve_arc.py  solve_arcs.py  v_concat_comp.py  v_in_out_comp.py
gtoc13/dymos_solver/tests/: test_dymos_solver.py  test_ephem_comp.py  test_flyby_comp.py  test_ode_comp.py
gtoc13/initial_arc/: solve_first_arc_integrated.py
gtoc13/mdao/: dymos_solver.py
gtoc13/path_finding/: __init__.py  beam_search.py  bs_lambert.py  ga_search.py  pygmo_full_problem.py  pygmo_full_problem_fwd.py  pyoptsparse_full_problem_fwd.py  sequence_search.py  starting_sequence.py
gtoc13/path_finding/beam/: beam_search.py  bs_lambert.py  bs_to_dymos.py  config.py  dv_limits.py  io.py  lambert.py  pipeline.py  plot_results.py  scoring.py
gtoc13/path_finding/binlp/: b_utils.py  binlp_utils.py  build_model.py  main.py  multi_manual.py  multi_test.py  multisegment.ipynb  multisegment_solver.py  problem_builder.py  problems.py  prune_run.py  run_script.py  sequence_problem.py  solver_outputs.py  w_utils.py  windows.ipynb
gtoc13/path_finding/binlp/__main___out/: IPOPT.out
gtoc13/path_finding/binlp/__main___out/coloring_files/: total_coloring.pkl
gtoc13/path_finding/binlp/__main___out/reports/: inputs.html  n2.html  opt_report.html  total_coloring.html
gtoc13/path_finding/tests/: test_beam_search.py
gtoc13/tests/: test_arc_headers.py  test_mission_plan.py  test_odes.py  test_propagate_ballistic.py  test_solution_write.py
solutions/: 10_6_4_5_4_minE.txt  10_9_8.pln  10_9_8.txt  dymos_10_9_8_7.txt  dymos_solution_1.txt  dymos_solution_10.txt  dymos_solution_2.txt  dymos_solution_3.txt  dymos_solution_4.txt  dymos_solution_5.txt  dymos_solution_6.txt  dymos_solution_7.txt  dymos_solution_8.txt  dymos_solution_9.txt  grand_tour.txt  rob.txt  solution0.txt  test_mission.pln  test_mission.txt  x_bespin_hoth_beyonce.txt
solutions/tour_1/: bs_mission_bw25_d100_top100_20251115-015124Z_fromBody4comets.json  bs_to_dymos.py
