[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtoc13"
version = "0.1.0"
description = "GTOC13 trajectory optimization framework using JAX"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Rob Falck", email = "robfalck@gmail.com"}
]
keywords = ["optimization", "trajectory", "orbital-mechanics", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.20.0",
    "diffrax>=0.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pykep = [
    "pykep>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "isort>=5.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/robfalck/gtoc13"
Repository = "https://github.com/robfalck/gtoc13"

[tool.setuptools.packages.find]
where = ["."]
include = ["gtoc13*"]

[tool.isort]
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
